Add virtual keyboard item into opt-in IME menu.

The 'Smart deploy toggle' is always hidden in opt-in IME menu. We should show/hide it based on the vr and devices state.
Make ImeMenuTray listens on the virtual keyboard state to show the toggle.
Currently the ImeMenuBubble doesn't support update UI. So if there's state change (which leads to UI change) of the VK, just hide the bubble.

BUG=668013
TEST=Verified on local build.

Review-Url: https://codereview.chromium.org/2474843002
Cr-Commit-Position: refs/heads/master@{#434127}

Former-commit-id: 1fb9e7720d5a4ddaef6ce257f4d252a831bea688