ash/common/system/chromeos/ime_menu/ime_menu_tray.h
@@ -6,6 +6,7 @@
 #define ASH_COMMON_SYSTEM_CHROMEOS_IME_MENU_IME_MENU_TRAY_H_
 
 #include "ash/ash_export.h"
+#include "ash/common/system/chromeos/virtual_keyboard/virtual_keyboard_observer.h"
 #include "ash/common/system/ime/ime_observer.h"
 #include "ash/common/system/tray/ime_info.h"
 #include "ash/common/system/tray/tray_background_view.h"
@@ -28,7 +29,8 @@ class WmWindow;
 class ASH_EXPORT ImeMenuTray : public TrayBackgroundView,
                                public IMEObserver,
                                public views::TrayBubbleView::Delegate,
-                               public keyboard::KeyboardControllerObserver {
+                               public keyboard::KeyboardControllerObserver,
+                               public VirtualKeyboardObserver {
  public:
   explicit ImeMenuTray(WmShelf* wm_shelf);
   ~ImeMenuTray() override;
@@ -53,6 +55,10 @@ class ASH_EXPORT ImeMenuTray : public TrayBackgroundView,
   // on the bottom. Otherwise, the menu will show a 'Customize...' bottom row
   // for non-MD UI, and a Settings button in the title row for MD.
   bool ShouldShowEmojiHandwritingVoiceButtons() const;
+
+  // Returns whether the virtual keyboard toggle should be shown in shown in the
+  // opt-in IME menu.
+  bool ShouldShowKeyboardToggle() const;
 
   // TrayBackgroundView:
   void SetShelfAlignment(ShelfAlignment alignment) override;
@@ -81,6 +87,9 @@ class ASH_EXPORT ImeMenuTray : public TrayBackgroundView,
   void OnKeyboardClosed() override;
   void OnKeyboardHidden() override;
 
+  // VirtualKeyboardObserver:
+  void OnKeyboardSuppressionChanged(bool suppressed) override;
+
  private:
   // To allow the test class to access |label_|.
   friend class ImeMenuTrayTest;
@@ -97,6 +106,7 @@ class ASH_EXPORT ImeMenuTray : public TrayBackgroundView,
   bool show_keyboard_;
   bool force_show_keyboard_;
   bool should_block_shelf_auto_hide_;
+  bool keyboard_suppressed_;
 
   DISALLOW_COPY_AND_ASSIGN(ImeMenuTray);
 };
